Freedom Sanbox Ant Deploy/src/objects/Registration__c.object
<CustomObject>
    <fields>
        <fullName>Accompanied_by_Spouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accompanied by Spouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>House No/Building Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invitation_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invitation Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Not_Interested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Interested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <label>Occupation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_to_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_to_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>Registrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Registration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>